# ai-creative-writing-backend

./: .gitignore  README.MD  endpoints.py  initialize.bat  prompt_vars.py  pyproject.toml  start.bat  start_listener.bat  story.ipynb  story.md  story_generator.py
.devcontainer/: devcontainer.json
.windsurf/workflows/: exec-with-specs.md  plan-with-specs.md
Specs/: imports.json  project_tree.md  readme.md  specs.md
Vault/.obsidian/: command-palette.json  hotkeys.json  types.json  workspace.json
Vault/Red Hood/: Story.md  prompts.md
_includes/: ApiComposer.py  ChatHistory.py  Streamer.py  __init__.py  abbreviations.py  abbreviations.yaml  chat_endpoints.py  chat_methods.py  chat_settings.py  chat_ui.py  config.json  config.py  dispatcher.py  endpoints.py  endpoints.yaml  listener.py  main.py  methods.py  process_request.py  prompt_vars.py  settings.py  settings.yaml  start.py  ui.py  vars.py
_includes/Settings/: Prompts structure.yaml  Prompts_structure.yaml  abbreviations.yaml  endpoints.yaml  models.yaml  settings.yaml  variables.yaml  vars.yaml
_includes/StoryGenerator/: ApiComposer.py  Chat.py  ChatHistory.py  ConfigClass.py  History.py  StoryGenerator.py  Streamer.py  Utility.py  _story_changer.py  _story_generator.py  _story_rewriter.py  _story_summarizer.py  miscellaneous.py
_includes/StreamerMethods/: stream_response_with_openai_client.py  stream_response_with_openrouter_api.py
_includes/app/: ApiComposer.py  Chat.py  ChatHistory.py  ConfigClass.py  ConfigManager.py  Factory.py  History.py  PromptComposer.py  Streamer.py  TokenHandler.py  Utility.py  dispatcher.py
_includes/settings/: Abbreviations.yaml  All Variables.yaml  Chat Settings.yaml  Chat_settings.yaml  Endpoints.yaml  Models.yaml  Prompts_structure.yaml  Settings.yaml  Variables.yaml
obsidian-plugin/: README.md  build.js  package-lock.json  package.json  tsconfig.json
tests/: config.py
tests/_logic/: chat_test.py  (+2 more)
(+153 files in other folders)
