[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "story-writer-python-backend"
dynamic = ["version"]
description = "Python backend for story writer application"
authors = [
    {name = "Aksenov Nikita"}
]
readme = "README.MD"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai==1.99.9",
    "PyYAML==6.0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["_includes*"]

[tool.setuptools_scm]